<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.vsm.mymapstest.ui.maps.FirstFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.vsm.mymapstest.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_map" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.vsm.mymapstest.ui.location.LocationFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_location" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.vsm.mymapstest.ui.push.PushFragment"
        android:label="fragment_push"
        tools:layout="@layout/fragment_push" />

    <!--<fragment
        android:id="@+id/nav_slideshow"
        android:name="com.vsm.mymapstest.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />-->
</navigation>